--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,6 +108,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "exclude": [ "node_modules"], // would be default,
-  "include": ["./src/**/*"]
+  // "exclude": [ "node_modules"], // would be default,
+  // "include": ["./src/**/*"]
 }
